gpx: add beeline tag, add internal export